Added addmission page, news page, about page and renger the backgroud color and much more

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News-AMFS</title>
+    <title>About-A M F S</title>
 
     <!---Font Awesome cdn---->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -46,11 +46,11 @@
                         <ul class="dropdown-menu">
                             <li><a href="academic%20Calender.html">Academic Calender</a></li>
                             <li><a href="#">Circulars</a></li>
-                            <li><a href="#">News & Events</a></li>
+                            <li><a href="news.html">News & Events</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">About</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group waves-effect waves-light">
@@ -63,37 +63,70 @@
     </nav>
     <!--End Navbar-->
 
-    <!--News Content-->
+    <!--About us-->
     <div class="jumbotron">
         <div class="container text-center">
-            <h1>News and Events</h1>
-            <h2>Session 2016-17</h2>
-            <p>To get all alert of our school, kindly follow us on <a target="_blank" href="http://www.twitter.com/AlMuslehSchool">twitter</a>. <br/>
-                Just type in your write message <strong style="font-family: Cambria;">FOLLOW ALMUSLEHSCHOOL</strong> and send it to <strong style="font-family: Cambria">40404</strong>.
-            </p>
+            <h1>What We Serve!</h1>
         </div>
     </div>
 
     <div class="container">
-        <table class="table" style="width: 70%;margin: auto">
-            <tr>
-                <td>
-                    <h3 style="font-family: serif">SUBJECT: <u>Fee Voucher of April-2016</u></h3>
-                    <p class="text-justify">Dear Parents,<br/>Fee voucher for the month of April 2016 has been issued to your child. Kindly
-                        pay the fee bbefore the 10<sup>th</sup> of April to save yourself from penalty.</p>
-                    <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <h3 style="font-family: serif">SUBJECT: <u>Commencement   of   New   Session</u></h3>
-                    <p class="text-justify">Dear Parents,<br/>New Session 2016-17 will going to be starting from 5<sup>th</sup> April, 2016.</p>
-                    <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
-                </td>
-            </tr>
-        </table>
+        <div>
+            <h3>Why to join Us</h3>
+            <p class="text-justify">Al Musleh foundation School work with the cooperation of
+                <strong><em>Al Musleh Welfare Society</em></strong>,  with the staff of highly qualified
+                teachers and cooperative management to enlighten the future of our youth
+                with modern Academic and Islamic education.
+            </p>
+        </div>
+        <div>
+            <h3>Who we are?</h3>
+            <p class="text-justify">Al Musleh Foundation School or <abbr title="Al Musleh Foundation School">AMFS</abbr> is one of the well known
+                and reputed private owned schools in Karachi, Pakistan. Get here more information about admission, fee
+                structure, contact Number, jobs and campuses details. School serves in two shifts, morning shift and
+                afternoon shift. Morning shift is for Pre-Primary, Primary and Secondary (only girls) section while
+                Afternoon shift is for Secondary boys.
+            </p>
+        </div>
+        <div>
+            <h3>Our Mission</h3>
+            <p class="text-justify">Our mission is to prepares students to understand, contribute to, and succeed in a
+                rapidly changing society, and thus make the world a better and more just place. We will ensure that our
+                students develop both the skills a sound liberal arts education provides and the competencies essential
+                for success and leadership in the emerging creative economy. We will also lead in generating practical
+                and theoretical knowledge that enables people to better understand our world and improve conditions for
+                local and global communities. We aim to develop and groom our students educationally, morally and
+                socially with a team of highly qualified teachers and efficient management.
+            </p>
+        </div>
+        <div>
+            <h3>News & Alerts</h3>
+            <p class="text-justify">
+                <ul>
+                    <li>
+                        To get all alert of our school, kindly follow us on
+                        <a target="_blank" style="text-decoration: none;color: black" href="http://www.twitter.com/AlMuslehSchool">
+                        twitter</a>. Just type in your write message
+                        <code>FOLLOW ALMUSLEHSCHOOL</code> and send it to <code>40404</code>.
+                    </li>
+                    <li>
+                        You can also like our official <a target="_blank" style="text-decoration: none;color: black" href="http://www.facebook.com/amfsofficial">
+                        facebook</a> page to get aware of the latest happening at school. <code>www.facebook.com/amfsofficial</code>
+                    </li>
+                </ul>
+            </p>
+        </div>
+        <div>
+            <p>
+                Kindly consult the school office for your queries. <br/><br/>
+                Looking forward for your kind and usual support. <br/><br/>
+                Regards,<br/>
+                <strong style="font-family: Adobe Garamond Pro Bold">Ruqaiya Farooq <br/>(Principal)</strong>
+
+            </p>
+        </div>
     </div>
-    <!--News Content END-->
+    <!--About us END-->
 
     <hr/>
     <!--Footer section-->
@@ -127,8 +160,7 @@
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="public/js/javascript.js"></script>
+            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 </body>
 </html>
