--- a/admission.html
+++ b/admission.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News-AMFS</title>
+    <title>Admission-A M F S</title>
 
     <!---Font Awesome cdn---->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -39,14 +39,14 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Academics</a></li>
-                    <li><a href="admission.html">Admission</a></li>
+                    <li><a href="#">Admission</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Curriculum and News
                         <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="academic%20Calender.html">Academic Calender</a></li>
                             <li><a href="#">Circulars</a></li>
-                            <li><a href="#">News & Events</a></li>
+                            <li><a href="news.html">News & Events</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
@@ -63,37 +63,89 @@
     </nav>
     <!--End Navbar-->
 
-    <!--News Content-->
+    <!--Admission Content-->
     <div class="jumbotron">
         <div class="container text-center">
-            <h1>News and Events</h1>
-            <h2>Session 2016-17</h2>
-            <p>To get all alert of our school, kindly follow us on <a target="_blank" href="http://www.twitter.com/AlMuslehSchool">twitter</a>. <br/>
-                Just type in your write message <strong style="font-family: Cambria;">FOLLOW ALMUSLEHSCHOOL</strong> and send it to <strong style="font-family: Cambria">40404</strong>.
-            </p>
+            <h1>Admission</h1>
+            <a href="documents/Admission-Form.pdf" target="_blank" class="btn btn-info btn-sm" role="button">
+                <span class="glyphicon glyphicon-download"></span> Download Form
+            </a>
         </div>
     </div>
 
     <div class="container">
-        <table class="table" style="width: 70%;margin: auto">
-            <tr>
-                <td>
-                    <h3 style="font-family: serif">SUBJECT: <u>Fee Voucher of April-2016</u></h3>
-                    <p class="text-justify">Dear Parents,<br/>Fee voucher for the month of April 2016 has been issued to your child. Kindly
-                        pay the fee bbefore the 10<sup>th</sup> of April to save yourself from penalty.</p>
-                    <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <h3 style="font-family: serif">SUBJECT: <u>Commencement   of   New   Session</u></h3>
-                    <p class="text-justify">Dear Parents,<br/>New Session 2016-17 will going to be starting from 5<sup>th</sup> April, 2016.</p>
-                    <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
-                </td>
-            </tr>
-        </table>
+        <div>
+            <h3>Our Mission</h3>
+            <p class="text-justify">Our mission is to prepares students to understand, contribute to, and succeed in a
+                rapidly changing society, and thus make the world a better and more just place. We will ensure that our
+                students develop both the skills a sound liberal arts education provides and the competencies essential
+                for success and leadership in the emerging creative economy. We will also lead in generating practical
+                and theoretical knowledge that enables people to better understand our world and improve conditions for
+                local and global communities. We aim to develop and groom our students educationally, morally and
+                socially with a team of highly qualified teachers and efficient management.
+            </p>
+        </div>
+        <div>
+            <h3>Admission Criteria</h3>
+            <p class="text-justify">A student must pass an exam for admission at Al Musleh Foundation School. Admission
+                test is managed by school management to check student eligibility. Registration for admissions starts
+                in March. Thousand of parent try and wish for admission of their child in <abbr title="Al Musleh Foundation School">AMFS</abbr> but only lucky one can
+                get admission in Al Musleh Foundation School. All the students are admitted only strict merit policy by
+                passing admission test. Any how, you can prepare your child for kgs from their childhood by knowing
+                exact admission criteria. Contact with headmistress to know more about admission fees, criteria, tests,
+                Interview, admission dates and others related queries.
+            </p>
+        </div>
+        <div>
+            <h3>Timings</h3>
+            <p class="text-justify">School timing for Morning shift is 8:00am and for Afternoon shift is 12:45pm. Therefore, no
+                students will be allowed to enter the school after the mentioned time.
+            </p>
+            <div class="table-responsive">
+                <table class="table table-striped table-hover text-center" style="width: 55%;margin: auto">
+                    <thead>
+                    <tr>
+                        <th>Section</th>
+                        <th>Timings</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Junior & Senior</td>
+                        <td>8:30am to 12:20pm</td>
+                    </tr>
+                    <tr>
+                        <td>Advance to X (Morning)</td>
+                        <td>8:00am to 12:30pm</td>
+                    </tr>
+                    <tr>
+                        <td>V to X boys (Afternoon)</td>
+                        <td>12:45pm to 5:00pm</td>
+                    </tr>
+                    <tr>
+                        <td>Friday Timing (Morning)</td>
+                        <td>8:00am to 12:pm</td>
+                    </tr>
+                    <tr>
+                        <td>Friday Timing (Afternoon)</td>
+                        <td>2:00pm to 5:00pm</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div>
+            <h3>Books and Uniform</h3>
+            <p class="text-justify">Uniform for all school, are available at <strong>The Students Uniform Centre
+            </strong> (<code>Contact no. 021-32446469 & 0333-3378170</code>) and <strong>Ajwa Uniform</strong>
+                (<code>Contact no. 0322 3117901</code>). Students are expected to be neatly dressed in school uniform,
+                polished black school shoes  and wearing white socks. All books are available at <strong>Pardesi Book
+                    Stall</strong>, Kharadar (<code>Contact no. 0000 0000000</code>).
+            </p>
+        </div>
     </div>
-    <!--News Content END-->
+    <!--Admission Content END-->
+
 
     <hr/>
     <!--Footer section-->
@@ -113,7 +165,7 @@
 
                     <div class="footer-copyright text-center rgba-black-light">
                         <div class="container-fluid">
-                            &copy; Copyright 2016: <a class="lighten" href="#">www.amfs.edu.com</a>
+                            &copy; Copyright 2016: <a href="#">www.amfs.edu.com</a>
                         </div>
                     </div>
                 </div>
@@ -122,13 +174,15 @@
     </div>
     <!--/.Footer section-->
 
+
     <!--Jquery link-->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="public/js/javascript.js"></script>
+            integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+
 
 </body>
 </html>
