--- a/academic Calender.html
+++ b/academic Calender.html
@@ -38,9 +38,9 @@
             <div class = "collapse navbar-collapse" id="my-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Academics</a></li>
-                    <li><a href="#">Admission</a></li>
+                    <li><a href="admission.html">Admission</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Curriculum and News
                                             <span class="caret"></span></a>
@@ -51,11 +51,11 @@
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group waves-effect waves-light">
-                        <span class="glyphicon glyphicon-search searchsymbol"></span>
+                        <span class="glyphicon glyphicon-search searchsymbol" style="color:blue;"></span>
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
                 </form>
@@ -69,13 +69,17 @@
         <div class="container text-center">
             <h1>Academic Calender</h1>
             <h2>Session 2016-17</h2>
+            <a href="image/Academic-Calender-2016-17.png" target="_blank" class="btn btn-info btn-sm" role="button">
+                <span class="glyphicon glyphicon-download"></span> Download
+            </a>
+
         </div>
     </div>
 
     <div class="container table-responsive">
-        <table class="table text-center">
+        <table class="table table-striped text-center">
             <thead>
-                <tr style="font-family: cursive;color: white;">
+                <tr class="info" style="font-family: cursive;color: white;">
                     <th>Term</th>
                     <th>Weeks</th>
                     <th>Dates</th>
@@ -86,7 +90,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="10"><strong>47 day’s planning <br/> MID TERM</strong></td>
+                    <td style="background-color: white" rowspan="10"><strong>47 day’s planning <br/> MID TERM</strong></td>
                     <td>00</td>
                     <td>05-04-16 to 09-04-16</td>
                     <td>00</td>
@@ -157,10 +161,10 @@
                     <td>PTM<br/>Bimonthly Result</td>
                 </tr>
                 <tr>
-                    <td colspan="6"><h4>07-06-16 to 09.07.16 <br/> Ramadan and Eid-tul-Fitr Holidays</h4></td>
+                    <td class="success" colspan="6"><h4>07-06-16 to 09.07.16 <br/> Ramadan and Eid-tul-Fitr Holidays</h4></td>
                 </tr>
                 <tr>
-                    <td rowspan="13"><strong>53 day’s planning <br/> MID TERM</strong></td>
+                    <td style="background-color: white" rowspan="13"><strong>53 day’s planning <br/> MID TERM</strong></td>
                     <td>10</td>
                     <td>11-07-16 to 16-07-16</td>
                     <td>04</td>
