--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,9 @@
             <div class = "collapse navbar-collapse" id="my-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Academics</a></li>
-                    <li><a href="#">Admission</a></li>
+                    <li><a href="admission.html">Admission</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Curriculum and News
                         <span class="caret"></span></a>
@@ -50,11 +50,11 @@
                         </ul>
                     </li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group waves-effect waves-light">
-                        <span class="glyphicon glyphicon-search searchsymbol"></span>
+                        <span class="glyphicon glyphicon-search searchsymbol" style="color:blue;"></span>
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
                 </form>
