--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <div class = "collapse navbar-collapse" id="my-navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Gallery</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#">Academics</a></li>
-                    <li><a href="#">Admission</a></li>
+                    <li><a href="admission.html">Admission</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Curriculum and News
                                             <span class="caret"></span></a>
@@ -50,11 +50,11 @@
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group waves-effect waves-light">
-                        <span class="glyphicon glyphicon-search searchsymbol"></span>
+                        <span class="glyphicon glyphicon-search searchsymbol" style="color:blue;"></span>
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
                 </form>
@@ -81,7 +81,7 @@
             <div class="carousel-inner" role="listbox">
 
                 <div class="item active">
-                    <img src="image/slider-0.jpg" alt="Chania" width="460" height="345">
+                    <img src="image/slider-0.jpg" alt="" width="460" height="345">
                     <div class="carousel-caption">
                         <h3>Welcome</h3>
                         <p>Well come to our School.</p>
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="image/slider-1.jpg" alt="Chania" width="460" height="345">
+                    <img src="image/slider-1.jpg" alt="" width="460" height="345">
                     <div class="carousel-caption">
                         <h3>Mr.Zeeshan</h3>
                         <p>Participation at talent expo held at <abbr title="Pakistan Air Force">PAF</abbr> museum</p>
@@ -97,7 +97,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="image/slider-2.jpg" alt="Flower" width="460" height="345">
+                    <img src="image/slider-2.jpg" alt="" width="460" height="345">
                     <div class="carousel-caption">
                         <h3>Talent Expo</h3>
                         <p>Students performance at talent expo held at <abbr title="Pakistan Air Force">PAF</abbr> museum</p>
@@ -105,7 +105,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="image/slider-3.jpg" alt="Flower" width="460" height="345">
+                    <img src="image/slider-3.jpg" alt="" width="460" height="345">
                     <div class="carousel-caption">
                         <h3>Reuse ability of Raw materials</h3>
                         <p>Reuse ability of Raw materials</p>
@@ -151,10 +151,10 @@
             </tr>
             <tr>
                 <td>
-                    <p class="text-center" style="color:white;">Al Musleh foundation School work with the cooperation of
+                    <p class="text-center">Al Musleh foundation School work with the cooperation of
                         <strong><em>Al Musleh Welfare Society</em></strong>,  with the staff of highly qualified
                         teachers and cooperative management to enlighten the future of our youth
-                        with modern Academic and Islamic education.</p>
+                        with modern Academic and Islamic education. <a style="text-decoration: none" href="about.html"><em>read more</em></a></p>
                 </td>
             </tr>
         </table>
@@ -162,7 +162,7 @@
             <tr>
                 <td width="60%">
                     <h2 style="font-family: cursive">OUR MISSION</h2>
-                    <p class="text-justify" style="color:white;">Our mission is to prepares students to understand, contribute to, and
+                    <p class="text-justify">Our mission is to prepares students to understand, contribute to, and
                         succeed in a rapidly changing society, and thus make the world a better and more just place.
                         We will ensure that our students develop both the skills a sound liberal arts education
                         provides and the competencies essential for success and leadership in the emerging creative
