created files for Academics and modified news page with pannel

--- a/academic-grade1.html
+++ b/academic-grade1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>News-AMFS</title>
+    <title>Grade I Academics</title>
 
     <!---Font Awesome cdn---->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -15,7 +15,6 @@
 
 </head>
 <body>
-
     <!--Navbar-->
     <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
         <div class="container-fluid">
@@ -36,9 +35,27 @@
             <!--Navbar Items-->
             <div class = "collapse navbar-collapse" id="my-navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">Academics</a></li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Grade Junior</a></li>
+                            <li><a href="#">Grade Senior</a></li>
+                            <li><a href="#">Grade Advance</a></li>
+                            <li><a href="#">Grade I</a></li>
+                            <li><a href="#">Grade II</a></li>
+                            <li><a href="#">Grade III</a></li>
+                            <li><a href="#">Grade IV</a></li>
+                            <li><a href="#">Grade V</a></li>
+                            <li><a href="#">Grade VI</a></li>
+                            <li><a href="#">Grade VII</a></li>
+                            <li><a href="#">Grade VIII</a></li>
+                            <li><a href="#">Grade IX-Science</a></li>
+                            <li><a href="#">Grade IX-General</a></li>
+                            <li><a href="#">Grade X-Science</a></li>
+                            <li><a href="#">Grade X-General</a></li>
+                        </ul>
+                    </li>
                     <li><a href="admission.html">Admission</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Curriculum and News
@@ -46,7 +63,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="academic%20Calender.html">Academic Calender</a></li>
                             <li><a href="#">Circulars</a></li>
-                            <li><a href="#">News & Events</a></li>
+                            <li><a href="news.html">News & Events</a></li>
                         </ul>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
@@ -63,60 +80,15 @@
     </nav>
     <!--End Navbar-->
 
-    <!--News Content-->
+
+
+    <!--Academic Grade 1-->
     <div class="jumbotron">
         <div class="container text-center">
-            <h1>News and Events</h1>
-            <h2>Session 2016-17</h2>
-            <p>To get all alert of our school, kindly follow us on <a target="_blank" href="http://www.twitter.com/AlMuslehSchool">twitter</a>. <br/>
-                Just type in your write message <strong style="font-family: Cambria;">FOLLOW ALMUSLEHSCHOOL</strong> and send it to <strong style="font-family: Cambria">40404</strong>.
-            </p>
+            <h1 class="gradefont">Grade I</h1>
         </div>
     </div>
-
-    <div class="container">
-
-        <div class="news panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title text-center">Fee Voucher of April-2016</h3>
-            </div>
-            <div class="panel-body text-justify">
-                <p>Dear Parents,<br/>Fee voucher for the month of April 2016 has been issued to your child. Kindly
-                    pay the fee bbefore the 10<sup>th</sup> of April to save yourself from penalty.</p>
-                <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
-            </div>
-        </div>
-
-        <div class="news panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title text-center">Commencement   of   New   Session</h3>
-            </div>
-            <div class="panel-body text-justify">
-                <p>Dear Parents,<br/>New Session 2016-17 will going to be starting from 5<sup>th</sup> April, 2016.</p>
-                <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
-            </div>
-        </div>
-
-
-        <!--<table class="table" style="width: 70%;margin: auto">-->
-            <!--<tr>-->
-                <!--<td>-->
-                    <!--<h3 style="font-family: serif">SUBJECT: <u>Fee Voucher of April-2016</u></h3>-->
-                    <!--<p class="text-justify">Dear Parents,<br/>Fee voucher for the month of April 2016 has been issued to your child. Kindly-->
-                        <!--pay the fee bbefore the 10<sup>th</sup> of April to save yourself from penalty.</p>-->
-                    <!--<h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td>-->
-                    <!--<h3 style="font-family: serif">SUBJECT: <u>Commencement   of   New   Session</u></h3>-->
-                    <!--<p class="text-justify">Dear Parents,<br/>New Session 2016-17 will going to be starting from 5<sup>th</sup> April, 2016.</p>-->
-                    <!--<h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>-->
-                <!--</td>-->
-            <!--</tr>-->
-        <!--</table>-->
-    </div>
-    <!--News Content END-->
+    <!--Academic Grade 1 END-->
 
     <hr/>
     <!--Footer section-->
@@ -149,9 +121,8 @@
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-        integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="public/js/javascript.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
