--- a/index.html
+++ b/index.html
@@ -38,7 +38,25 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">Academics</a></li>
+                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="academic-junior.html">Grade Junior</a></li>
+                            <li><a href="academic-senior.html">Grade Senior</a></li>
+                            <li><a href="academic-advance.html">Grade Advance</a></li>
+                            <li><a href="academic-grade1.html">Grade I</a></li>
+                            <li><a href="academic-grade2.html">Grade II</a></li>
+                            <li><a href="academic-grade3.html">Grade III</a></li>
+                            <li><a href="academic-grade4.html">Grade IV</a></li>
+                            <li><a href="academic-grade5.html">Grade V</a></li>
+                            <li><a href="#">Grade VI</a></li>
+                            <li><a href="#">Grade VII</a></li>
+                            <li><a href="#">Grade VIII</a></li>
+                            <li><a href="#">Grade IX-Science</a></li>
+                            <li><a href="#">Grade IX-General</a></li>
+                            <li><a href="#">Grade X-Science</a></li>
+                            <li><a href="#">Grade X-General</a></li>
+                        </ul>
+                    </li>
                     <li><a href="admission.html">Admission</a></li>
                     <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                             aria-haspopup="true" aria-expanded="false">Curriculum and News
