--- a/academic-grade3.html
+++ b/academic-grade3.html
@@ -110,6 +110,10 @@
                     <div class="container-fluid">
                         &copy; Copyright 2016: <a class="lighten" href="#">www.amfs.edu.com</a>
                     </div>
+                    <div class="container">
+                        <p class="emaanlogofont"><em><br/>developed by :</em>
+                            <img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/></p>
+                    </div>
                 </div>
             </div>
         </div>
