created pages for grade 6, 7, 8 academics and modified index page with academics links and corrected hover property in academic calender table

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                             <li><a href="academic-grade3.html">Grade III</a></li>
                             <li><a href="academic-grade4.html">Grade IV</a></li>
                             <li><a href="academic-grade5.html">Grade V</a></li>
-                            <li><a href="#">Grade VI</a></li>
-                            <li><a href="#">Grade VII</a></li>
-                            <li><a href="#">Grade VIII</a></li>
+                            <li><a href="academic-grade6.html">Grade VI</a></li>
+                            <li><a href="academic-grade7.html">Grade VII</a></li>
+                            <li><a href="academic-grade8.html">Grade VIII</a></li>
                             <li><a href="#">Grade IX-Science</a></li>
                             <li><a href="#">Grade IX-General</a></li>
                             <li><a href="#">Grade X-Science</a></li>
