--- a/academic Calender.html
+++ b/academic Calender.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="container table-responsive">
-        <table class="table table-striped text-center">
+        <table class="table table-striped table-hover text-center">
             <thead>
                 <tr class="info" style="font-family: cursive;color: white;">
                     <th>Term</th>
