linked academic pages with other pages

--- a/academic-grade4.html
+++ b/academic-grade4.html
@@ -39,17 +39,17 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Grade Junior</a></li>
-                        <li><a href="#">Grade Senior</a></li>
-                        <li><a href="#">Grade Advance</a></li>
-                        <li><a href="#">Grade I</a></li>
-                        <li><a href="#">Grade II</a></li>
-                        <li><a href="#">Grade III</a></li>
+                        <li><a href="academic-junior.html">Grade Junior</a></li>
+                        <li><a href="academic-senior.html">Grade Senior</a></li>
+                        <li><a href="academic-advance.html">Grade Advance</a></li>
+                        <li><a href="academic-grade1.html">Grade I</a></li>
+                        <li><a href="academic-grade2.html">Grade II</a></li>
+                        <li><a href="academic-grade3.html">Grade III</a></li>
                         <li><a href="#">Grade IV</a></li>
-                        <li><a href="#">Grade V</a></li>
-                        <li><a href="#">Grade VI</a></li>
-                        <li><a href="#">Grade VII</a></li>
-                        <li><a href="#">Grade VIII</a></li>
+                        <li><a href="academic-grade5.html">Grade V</a></li>
+                        <li><a href="academic-grade6.html">Grade VI</a></li>
+                        <li><a href="academic-grade7.html">Grade VII</a></li>
+                        <li><a href="academic-grade8.html">Grade VIII</a></li>
                         <li><a href="#">Grade IX-Science</a></li>
                         <li><a href="#">Grade IX-General</a></li>
                         <li><a href="#">Grade X-Science</a></li>
