--- a/index.html
+++ b/index.html
@@ -216,7 +216,9 @@
                         </div>
                         <div class="container">
                             <p class="emaanlogofont"><em><br/>developed by :</em>
-                            <img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/></p>
+                                <img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/>
+                                <h3 class="emaanlogoquote"><span class="glyphicon glyphicon-asterisk"></span> your faith make us to work more perfectly <span class="glyphicon glyphicon-asterisk"></span></h3>
+                            </p>
                         </div>
                     </div>
                 </div>
