--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,8 @@
     <title>Gallery-A M F S</title>
 
     <!---Font Awesome cdn---->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Carter+One" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Damion" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -86,8 +88,8 @@
     <div class="container text-center">
         <h1>Moments</h1>
         <blockquote>
-            <p style="font-family: Monotype Corsiva">Capturing the moments of today that will wow your hearts tomorrow</p>
-            <footer><cite title="Quotation for Moments">Anonymous</cite></footer>
+            <p style="font-family: Damion">Capturing the moments of today that will wow your hearts tomorrow</p>
+            <footer style="color: inherit"><cite title="Quotation for Moments">Anonymous</cite></footer>
         </blockquote>
     </div>
 </div>
