--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
     <title>News-AMFS</title>
 
     <!---Font Awesome cdn---->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Carter+One" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -86,7 +87,7 @@
         <div class="container text-center">
             <h1>News and Events</h1>
             <h2>Session 2016-17</h2>
-            <p>To get all alert of our school, kindly follow us on <a target="_blank" href="http://www.twitter.com/AlMuslehSchool">twitter</a>. <br/>
+            <p>To get all alert of our school, kindly follow us on <a target="_blank" style="text-decoration: none; color: inherit;font-weight: bold" href="http://www.twitter.com/AlMuslehSchool"><em>twitter</em></a>. <br/>
                 Just type in your write message <strong style="font-family: Cambria;">FOLLOW ALMUSLEHSCHOOL</strong> and send it to <strong style="font-family: Cambria">40404</strong>.
             </p>
         </div>
