added addmission and job detail in about page

--- a/about.html
+++ b/about.html
@@ -119,6 +119,24 @@
             </p>
         </div>
         <div>
+            <h3>How to Join?</h3>
+            <p class="text-justify">A student must pass an exam for admission at Al Musleh Foundation School. Admission
+                test is managed by school management to check student eligibility. Registration for admissions starts in
+                March. Thousand of parent try and wish for admission of their child in AMFS but only lucky one can get
+                admission in Al Musleh Foundation School. All the students are admitted only strict merit policy by
+                passing admission test. Any how, you can prepare your child for kgs from their childhood by knowing
+                exact admission criteria. Contact with headmistress to know more about admission fees, criteria, tests,
+                Interview, admission dates and others related queries. <a style="text-decoration: none" href="admission.html"><em>read more</em></a>
+            </p>
+        </div>
+        <div>
+            <h3>Want to apply for Job?</h3>
+            <p class="text-justify">Teaching is the best way to serve your society. If you want to apply here as a
+                teacher or in any other designation <a style="text-decoration: none" href="mailto:almusleh.foundation@gmail.com">
+                send</a> us your <abbr title="Curriculum Vitae">CV</abbr> or visit school office in morning timing.
+            </p>
+        </div>
+        <div>
             <h3>News & Alerts</h3>
             <p class="text-justify">
                 <ul>
