--- a/academic Calender.html
+++ b/academic Calender.html
@@ -308,12 +308,15 @@
                         <div class="container-fluid">
                             &copy; Copyright 2016: <a href="#">www.amfs.edu.com</a>
                         </div>
-                        <div class="container">
-                            <p class="emaanlogofont"><em><br/>developed by :</em>
-                                <img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/>
-                                <h3 class="emaanlogoquote"><span class="glyphicon glyphicon-asterisk"></span> your faith make us to work more perfectly <span class="glyphicon glyphicon-asterisk"></span></h3>
-                            </p>
+                        <div class="container-fluid">
+                            This website is build by <a class="lighten" href="#">EmaanSoft &amp Solution</a>
                         </div>
+                        <!--<div class="container">-->
+                            <!--<p class="emaanlogofont"><em><br/>developed by :</em>-->
+                                <!--<img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/>-->
+                                <!--<h3 class="emaanlogoquote"><span class="glyphicon glyphicon-asterisk"></span> your faith make us to work more perfectly <span class="glyphicon glyphicon-asterisk"></span></h3>-->
+                            <!--</p>-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
