--- a/academic-advance.html
+++ b/academic-advance.html
@@ -109,10 +109,13 @@
                         <div class="container-fluid">
                             &copy; Copyright 2016: <a class="lighten" href="#">www.amfs.edu.com</a>
                         </div>
-                        <div class="container">
-                            <p class="emaanlogofont"><em><br/>developed by :</em>
-                                <img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/></p>
+                        <div class="container-fluid">
+                            This website is build by <a class="lighten" href="#">EmaanSoft &amp Solution</a>
                         </div>
+                        <!--<div class="container">-->
+                            <!--<p class="emaanlogofont"><em><br/>developed by :</em>-->
+                                <!--<img src="image/emaansoft-logo.png" class="img-responsive center-block" width="180" height="100" alt="logo of EmaanSoft"/></p>-->
+                        <!--</div>-->
                     </div>
                 </div>
             </div>
