added news headline bar in index.html

--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
            </div>
        </nav>
        <!--End Navbar-->
-
        <!--Image Slider-->
        <div class="container-fluid">
            <br>
@@ -162,6 +161,10 @@
        </div>
        <!--End Slider-->
 
+       <div class="container-fluid news-strip">
+             <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"><h3>Fee voucher for the month of April 2016 has been issued to your child.
+                 <a href="news.html" style="font-size: small;color: red"><em>Read More</em></a></h3></marquee>
+       </div>
        <!--Content-->
        <div class="container">
            <table class="table">
