--- a/news.html
+++ b/news.html
@@ -101,7 +101,7 @@
             </div>
             <div class="panel-body text-justify">
                 <p>Dear Parents,<br/>Fee voucher for the month of April 2016 has been issued to your child. Kindly
-                    pay the fee bbefore the 10<sup>th</sup> of April to save yourself from penalty.</p>
+                    pay the fee before the 10<sup>th</sup> of April to save yourself from penalty.</p>
                 <h4>Regards, <br/><strong style="font-family: Cambria"><em>AMFS</em></strong></h4>
             </div>
         </div>
