--- a/contact.html
+++ b/contact.html
@@ -16,20 +16,19 @@
 
 </head>
 <body>
-
     <!--Navbar-->
-    <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
-        <div class="container-fluid">
-
-            <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#my-navbar-collapse">
-                <span class = "sr-only">Toggle navigation</span>
-                <span class = "icon-bar"></span>
-                <span class = "icon-bar"></span>
-                <span class = "icon-bar"></span>
-            </button>
+    <nav class="navbar navbar-default ">
+            <div class="container-fluid">
 
             <!--logo-->
             <div class="navbar-header">
+                <button type = "button" class = "navbar-toggle " data-toggle = "collapse" data-target = "#my-navbar-collapse" aria-expanded="false" aria-controls="navbar">
+                    <span class = "sr-only">Toggle navigation</span>
+                    <span class = "icon-bar"></span>
+                    <span class = "icon-bar"></span>
+                    <span class = "icon-bar"></span>
+                </button>
+
                 <a href="index.html" class="navbar-brand"><img src="image/AMFS_logo.jpg" class="img-responsive" width="40" alt="logo"/></a>
                 <a href="index.html" class="navbar-brand">A M F S</a>
             </div>
@@ -68,15 +67,15 @@
                             <li><a href="news.html">News & Events</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" class="active">Contact <span class="sr-only">(current)</span></a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group waves-effect waves-light">
-                        <span class="glyphicon glyphicon-search searchsymbol" style="color:blue;"></span>
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                </form>
+                <!--<form class="navbar-form navbar-right" role="search">-->
+                    <!--<div class="form-group waves-effect waves-light">-->
+                        <!--<span class="glyphicon glyphicon-search searchsymbol" style="color:blue;"></span>-->
+                        <!--<input type="text" class="form-control" placeholder="Search">-->
+                    <!--</div>-->
+                <!--</form>-->
             </div>
         </div>
     </nav>
