Little changes in css

--- a/academic Calender.html
+++ b/academic Calender.html
@@ -19,7 +19,7 @@
 
 
     <!--Navbar-->
-    <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
+    <nav class="navbar navbar-default"  role="navigation">
         <div class="container-fluid">
 
             <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#my-navbar-collapse">
@@ -107,7 +107,7 @@
                     <th>Activities</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="font-weight: bold">
                 <tr>
                     <td style="background-color: white" rowspan="10"><strong>47 day’s planning <br/> MID TERM</strong></td>
                     <td>00</td>
@@ -300,7 +300,7 @@
                         <a class="btn btn-lg btn-social-icon btn-twitter" href="http://www.twitter.com/AlMuslehSchool" target="_blank"><span class="fa fa-twitter"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-google" href="https://plus.google.com/u/1/108925276888731494966/" target="_blank"><span class="fa fa-google"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCGLWfbT4-MC0K67S4_ZsxCQ" target="_blank"><span class="fa fa-youtube"> </span></a>
-                        <a class="btn btn-lg btn-social-icon btn-envelop"><span class="fa fa-envelope-o"> </span></a>
+                        <a class="btn btn-lg btn-social-icon btn-envelop" href="mailto:almusleh.foundation@gmail.com"><span class="fa fa-envelope-o"> </span></a>
                     </div>
 
 
