--- a/admission.html
+++ b/admission.html
@@ -18,7 +18,7 @@
 <body>
 
     <!--Navbar-->
-    <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
+    <nav class="navbar navbar-default"  role="navigation">
         <div class="container-fluid">
 
             <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#my-navbar-collapse">
@@ -92,9 +92,9 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container admission-content">
         <div>
-            <h3>Our Mission</h3>
+            <h2>Our Mission</h2>
             <p class="text-justify">Our mission is to prepares students to understand, contribute to, and succeed in a
                 rapidly changing society, and thus make the world a better and more just place. We will ensure that our
                 students develop both the skills a sound liberal arts education provides and the competencies essential
@@ -105,7 +105,7 @@
             </p>
         </div>
         <div>
-            <h3>Admission Criteria</h3>
+            <h2>Admission Criteria</h2>
             <p class="text-justify">A student must pass an exam for admission at Al Musleh Foundation School. Admission
                 test is managed by school management to check student eligibility. Registration for admissions starts
                 in March. Thousand of parent try and wish for admission of their child in <abbr title="Al Musleh Foundation School">AMFS</abbr> but only lucky one can
@@ -116,7 +116,7 @@
             </p>
         </div>
         <div>
-            <h3>Timings</h3>
+            <h2>Timings</h2>
             <p class="text-justify">School timing for Morning shift is 8:00am and for Afternoon shift is 12:45pm. Therefore, no
                 students will be allowed to enter the school after the mentioned time.
             </p>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div>
-            <h3>Books and Uniform</h3>
+            <h2>Books and Uniform</h2>
             <p class="text-justify">Uniform for all school, are available at <strong>The Students Uniform Centre
             </strong> (<code>Contact no. 021-32446469 & 0333-3378170</code>) and <strong>Ajwa Uniform</strong>
                 (<code>Contact no. 0322 3117901</code>). Students are expected to be neatly dressed in school uniform,
@@ -178,7 +178,7 @@
                         <a class="btn btn-lg btn-social-icon btn-twitter" href="http://www.twitter.com/AlMuslehSchool" target="_blank"><span class="fa fa-twitter"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-google" href="https://plus.google.com/u/1/108925276888731494966/" target="_blank"><span class="fa fa-google"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCGLWfbT4-MC0K67S4_ZsxCQ" target="_blank"><span class="fa fa-youtube"> </span></a>
-                        <a class="btn btn-lg btn-social-icon btn-envelop"><span class="fa fa-envelope-o"> </span></a>
+                        <a class="btn btn-lg btn-social-icon btn-envelop" href="mailto:almusleh.foundation@gmail.com"><span class="fa fa-envelope-o"> </span></a>
                     </div>
 
 
