--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                <!--Navbar Items-->
                <div class = "collapse navbar-collapse" id="my-navbar-collapse">
                    <ul class="nav navbar-nav">
-                       <li><a href="#">Home</a></li>
+                       <li><a href="#" class="active">Home</a></li>
                        <li><a href="gallery.html">Gallery</a></li>
                        <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Academics<span class="caret"></span></a>
                            <ul class="dropdown-menu">
@@ -162,7 +162,7 @@
        <!--End Slider-->
 
        <div class="container-fluid news-strip">
-             <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"><h3>Fee voucher for the month of April 2016 has been issued to your child.
+             <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();"><h3>Fee voucher for the month of May 2016 has been issued to your child.
                  <a href="news.html" style="font-size: small;color: red"><em>Read More</em></a></h3></marquee>
        </div>
        <!--Content-->
@@ -173,7 +173,7 @@
                </tr>
                <tr>
                    <td>
-                       <p class="text-center">Al Musleh foundation School work with the cooperation of
+                       <p class="text-center" style="font-size: 20px">Al Musleh foundation School work with the cooperation of
                            <strong><em>Al Musleh Welfare Society</em></strong>,  with the staff of highly qualified
                            teachers and cooperative management to enlighten the future of our youth
                            with modern Academic and Islamic education. <a style="text-decoration: none" href="about.html"><em>read more</em></a></p>
@@ -184,7 +184,7 @@
                <tr>
                    <td width="60%">
                        <h2 style="font-family: cursive">OUR MISSION</h2>
-                       <p class="text-justify">Our mission is to prepares students to understand, contribute to, and
+                       <p class="text-justify" style="font-size: 20px">Our mission is to prepares students to understand, contribute to, and
                            succeed in a rapidly changing society, and thus make the world a better and more just place.
                            We will ensure that our students develop both the skills a sound liberal arts education
                            provides and the competencies essential for success and leadership in the emerging creative
@@ -210,7 +210,7 @@
                            <a class="btn btn-lg btn-social-icon btn-twitter" href="http://www.twitter.com/AlMuslehSchool" target="_blank"><span class="fa fa-twitter"> </span></a>
                            <a class="btn btn-lg btn-social-icon btn-google" href="https://plus.google.com/u/1/108925276888731494966/" target="_blank"><span class="fa fa-google"> </span></a>
                            <a class="btn btn-lg btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCGLWfbT4-MC0K67S4_ZsxCQ" target="_blank"><span class="fa fa-youtube"> </span></a>
-                           <a class="btn btn-lg btn-social-icon btn-envelop"><span class="fa fa-envelope-o"> </span></a>
+                           <a class="btn btn-lg btn-social-icon btn-envelop" href="mailto:almusleh.foundation@gmail.com"><span class="fa fa-envelope-o"> </span></a>
                        </div>
 
 
