--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
 
     <!--Navbar-->
-    <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
+    <nav class="navbar navbar-default"  role="navigation">
         <div class="container-fluid">
 
             <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#my-navbar-collapse">
@@ -89,9 +89,9 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container about">
         <div>
-            <h3>Why to join Us</h3>
+            <h2>Why to join Us?</h2>
             <p class="text-justify">Al Musleh foundation School work with the cooperation of
                 <strong><em>Al Musleh Welfare Society</em></strong>,  with the staff of highly qualified
                 teachers and cooperative management to enlighten the future of our youth
@@ -99,7 +99,7 @@
             </p>
         </div>
         <div>
-            <h3>Who we are?</h3>
+            <h2>Who we are?</h2>
             <p class="text-justify">Al Musleh Foundation School or <abbr title="Al Musleh Foundation School">AMFS</abbr> is one of the well known
                 and reputed private owned schools in Karachi, Pakistan. Get here more information about admission, fee
                 structure, contact Number, jobs and campuses details. School serves in two shifts, morning shift and
@@ -108,7 +108,7 @@
             </p>
         </div>
         <div>
-            <h3>Our Mission</h3>
+            <h2>Our Mission</h2>
             <p class="text-justify">Our mission is to prepares students to understand, contribute to, and succeed in a
                 rapidly changing society, and thus make the world a better and more just place. We will ensure that our
                 students develop both the skills a sound liberal arts education provides and the competencies essential
@@ -119,7 +119,7 @@
             </p>
         </div>
         <div>
-            <h3>How to Join?</h3>
+            <h2>How to Join?</h2>
             <p class="text-justify">A student must pass an exam for admission at Al Musleh Foundation School. Admission
                 test is managed by school management to check student eligibility. Registration for admissions starts in
                 March. Thousand of parent try and wish for admission of their child in AMFS but only lucky one can get
@@ -130,25 +130,28 @@
             </p>
         </div>
         <div>
-            <h3>Want to apply for Job?</h3>
+            <h2>Want to apply for Job?</h2>
             <p class="text-justify">Teaching is the best way to serve your society. If you want to apply here as a
                 teacher or in any other designation <a style="text-decoration: none" href="mailto:almusleh.foundation@gmail.com">
                 send</a> us your <abbr title="Curriculum Vitae">CV</abbr> or visit school office in morning timing.
             </p>
         </div>
         <div>
-            <h3>News & Alerts</h3>
+            <h2>News & Alerts</h2>
             <p class="text-justify">
                 <ul>
                     <li>
-                        To get all alert of our school, kindly follow us on
-                        <a target="_blank" style="text-decoration: none;color: black" href="http://www.twitter.com/AlMuslehSchool">
-                        twitter</a>. Just type in your write message
-                        <code>FOLLOW ALMUSLEHSCHOOL</code> and send it to <code>40404</code>.
+                        <p>To get all alert of our school, kindly follow us on
+                            <a target="_blank" style="text-decoration: none;color: black" href="http://www.twitter.com/AlMuslehSchool">
+                            twitter</a>. Just type in your write message
+                            <code>FOLLOW ALMUSLEHSCHOOL</code> and send it to <code>40404</code>.
+                        </p>
                     </li>
                     <li>
-                        You can also like our official <a target="_blank" style="text-decoration: none;color: black" href="http://www.facebook.com/amfsofficial">
-                        facebook</a> page to get aware of the latest happening at school. <code>www.facebook.com/amfsofficial</code>
+                        <p>
+                            You can also like our official <a target="_blank" style="text-decoration: none;color: black" href="http://www.facebook.com/amfsofficial">
+                            facebook</a> page to get aware of the latest happening at school. <code>www.facebook.com/amfsofficial</code>
+                        </p>
                     </li>
                 </ul>
             </p>
@@ -177,7 +180,7 @@
                         <a class="btn btn-lg btn-social-icon btn-twitter" href="http://www.twitter.com/AlMuslehSchool" target="_blank"><span class="fa fa-twitter"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-google" href="https://plus.google.com/u/1/108925276888731494966/" target="_blank"><span class="fa fa-google"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCGLWfbT4-MC0K67S4_ZsxCQ" target="_blank"><span class="fa fa-youtube"> </span></a>
-                        <a class="btn btn-lg btn-social-icon btn-envelop"><span class="fa fa-envelope-o"> </span></a>
+                        <a class="btn btn-lg btn-social-icon btn-envelop" href="mailto:almusleh.foundation@gmail.com"><span class="fa fa-envelope-o"> </span></a>
                     </div>
 
 
