--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                         <a class="btn btn-lg btn-social-icon btn-twitter" href="http://www.twitter.com/AlMuslehSchool" target="_blank"><span class="fa fa-twitter"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-google" href="https://plus.google.com/u/1/108925276888731494966/" target="_blank"><span class="fa fa-google"> </span></a>
                         <a class="btn btn-lg btn-social-icon btn-youtube" href="https://www.youtube.com/channel/UCGLWfbT4-MC0K67S4_ZsxCQ" target="_blank"><span class="fa fa-youtube"> </span></a>
-                        <a class="btn btn-lg btn-social-icon btn-envelop"><span class="fa fa-envelope-o"> </span></a>
+                        <a class="btn btn-lg btn-social-icon btn-envelop" href="mailto:almusleh.foundation@gmail.com"><span class="fa fa-envelope-o"> </span></a>
                     </div>
 
 
