--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
 <body>
 
     <!--Navbar-->
-    <nav class="navbar navbar-default navbar-fixed-top"  role="navigation">
+    <nav class="navbar navbar-default"  role="navigation">
         <div class="container-fluid">
 
             <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#my-navbar-collapse">
